--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "FAVS API developed using TypeScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc",
+    "start": "npx index.ts",
+    "dev": "tsnd --respawn index.ts"
   },
   "repository": {
     "type": "git",
@@ -18,12 +21,21 @@
   },
   "homepage": "https://github.com/Luis-S-S/FAVS-TS#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.3.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.36",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "eslint": "^8.16.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
   }
 }
