feat: implement user api. error with pre hook update

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,6 @@
         }
     },
     "rules": {
-        "no-console": "off",
         "import/extensions": [
             "error",
             "ignorePackages",
@@ -32,6 +31,8 @@
                 "ts": "never",
                 "tsx": "never"
             }
-        ]
+        ],
+        "no-return-await": "off",
+        "no-underscore-dangle": "off"
     }
 }
